# fastcode2_clipper2

./: .gitignore  README.md  project_scope.txt
baseline/CPP/fastcodeBM/: CMakeLists.txt
baseline/CPP/fastcodeBM/RectClipping/: OffsettingTest.cpp  OffsettingTest.h  RectClipping.cpp  RectClipping_BACKUP_16117.cpp  RectClipping_BASE_16040.cpp  TestGenerator.cpp  TestGenerator.h  UnionTest.cpp  main.cpp
cuda/CPP/: CMakeLists.txt
cuda/CPP/Clipper2Lib/include/clipper2/: clipper.area.cuh  clipper.core.cuh  clipper.cuh  clipper.h  clipper.offset.cuh  clipper.offset.h  clipper.rectclip.cuh  clipper.rectclip.h  clipper_openmp.h
cuda/CPP/Clipper2Lib/src/: clipper.area.cu  clipper.area.cu.orig  clipper.cu  clipper.offset.cpp  clipper.offset.cu  clipper.rectclip.cpp  clipper.rectclip.cu  clipper_openmp.cpp
cuda/CPP/fastcodeBM/: CMakeLists.txt
cuda/CPP/fastcodeBM/RectClipping/: AreaCalcTest.cpp  AreaCalcTest.cpp.orig  AreaCalcTest.h  AreaCalcTest.h.orig  OffsettingTest.cpp  OffsettingTest.h  RectClipping.cpp  RectClipping.h  TestGenerator.cpp  TestGenerator.h  UnionTest.cpp  UnionTest.h  main.cpp  main.cpp.orig
openmp/CPP/: CMakeLists.txt
openmp/CPP/Clipper2Lib/include/clipper2/: clipper.offset.h  clipper.rectclip.h  (+1 more)
openmp/CPP/Clipper2Lib/src/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp
openmp/CPP/fastcodeBM/: CMakeLists.txt
openmp/CPP/fastcodeBM/RectClipping/: AreaCalcTest.cpp  OffsettingTest.cpp  OffsettingTest.h  RectClipping.cpp  RectClipping.h  TestGenerator.cpp  TestGenerator.h  UnionTest.cpp  UnionTest.h  main.cpp  rdtsc.h  rdtsc_works.cpp
